gdnative/tests/ui/export_fail_07.stderr
error: string literal expected, wrap with double quotes
 --> tests/ui/export_fail_07.rs:4:17
  |
4 | #[export(kind = 123)]
  |                 ^^^
