gdnative/tests/ui/export_fail_07.rs
use gdnative::prelude::*;

#[derive(Export, ToVariant)]
#[export(kind = 123)]
pub enum Foo {
    Bar,
}

fn main() {}
